src/app/component/shared/components/edit-photo-pop-up/edit-photo-pop-up.component.scss
$secondErrorColor : #b42626;

.main-container {
  position: relative;
  width: 631px;
  height: 400px;
  font-family: var(--primary-font);
  display: flex;
  justify-content: center;
  align-items: center;
  background: #fff;

  .cancel {
    position: absolute;
    top: 26px;
    right: 26px;
    border: none;
    background-color: transparent;
    outline: none;
  }

  .wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .selected-photo {
      max-height: 148px;
      max-width: 217px;
      box-sizing: content-box;
    }

    p {
      font-weight: 500;
      font-size: 21px;
      line-height: 28px;
      padding: 24px 0 40px;
      margin: 0;
      text-align: center;
    }

    .warning {
      font-family: var(--primary-font);
      font-size: 14px;
      color: var(--error-ligh-red);
      padding: 0;
    }

    .buttons {
      display: flex;
      align-items: flex-end;

      label {
        margin: 0;
        padding-top: 16px;
      }

      .primary-global-button,
      .secondary-global-button {
        border: 1px solid var(--primary-green);
        box-sizing: border-box;
        border-radius: 5px;
        font-style: normal;
        font-weight: 600;
        font-size: 16px;
        height: 48px;
        line-height: 16px;
      }

      .primary-global-button {
        background: #fff;
        color: var(--primary-green);
        min-width: 132px;
        margin-right: 24px;
        padding: 16px;

        &:hover {
          border: 1px solid var(--secondary-dark-green);
          color: var(--secondary-dark-green);
        }
      }

      .delete {
        background: var(--error-ligh-red);
        border: 1px solid var(--error-ligh-red);
        border-radius: 3px;
        color: #fff;
        margin-left: 24px;

        &:hover {
          border: 1px solid $secondErrorColor;
          background: $secondErrorColor;
          color: #fff;
        }

        &:disabled {
          background: var(--primary-grey);
          border: 1px solid var(--primary-grey);
        }
      }

      .secondary-global-button {
        background: var(--primary-green);
        color: #fff;
        padding: 16px 24px;
        display: flex;
        align-items: center;

        &:hover {
          background: var(--secondary-dark-green);
        }

        &:focus {
          outline: none;
        }

        .spinner-border {
          margin-right: 10px;
        }
      }

      .change {
        width: 191px;
      }

      input {
        display: none;
      }
    }
  }
}

@media screen and (max-width: 631px) {
  .main-container {
    width: 100vw;
    height: 100vh;
  }
}

@media screen and (max-width: 500px) {
  .wrapper {
    p {
      padding: 24px 15px 40px;
    }

    .buttons {
      flex-direction: column;

      .primary-global-button,
      .secondary-global-button {
        margin: 0 0 24px;
        width: 287px;
      }
    }
  }
}

@media screen and (max-width: 320px) {
  .main-container {
    padding-right: 0;
    padding-left: 0;
  }
}

